--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -8,8 +8,12 @@ jobs:
       steps:
         - name: Checkout Code
           uses: actions/checkout@v4
-        - name: Printing Folders
-          run: ls
+        - name: Setup Node
+          uses: actions/setup-node@v4
+          with: 
+            node-version: '20.x'
+        - name: Install Dependencies
+          run: npm ci
 
       # 0. Checkout the code from repository
       # 1. Install dependencies of React application
