--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,9 +1,13 @@
 name: 06-contexts
-run-name: My Cutom Workflow run name - ${{runner.os}}
+run-name: 06 Contexts | DEBUG - ${{inputs.debug}}
 on: 
-    workflow_dispatch:
     push:
-
+    workflow_dispatch:
+        inputs:
+            debug:
+                type: boolean
+                default: false
+    
 jobs:
     echo-data:
         runs-on: ubuntu-latest
