--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -7,10 +7,16 @@ on:
             debug:
                 type: boolean
                 default: false
-    
+env:
+    MY_WORKFLOW_VAR: "workflow"   
+    MY_OVERWRITTEN_VAR: "workflow"
+
 jobs:
     echo-data:
         runs-on: ubuntu-latest
+        env:
+            MY_JOB_VAR: 'job'
+            MY_OVERWRITTEN_VAR: 'job'
         steps:
             - name: Display Information
               run: |
@@ -24,3 +30,13 @@ jobs:
             - name: Retrieve Variable
               run: |
                 echo "Variable Value: ${{vars.MY_VAR}}"
+            - name: Print Env Variables
+              env:
+                MY_OVERWRITTEN_VAR: 'step'
+              run: |
+                echo "Workflow Env : ${{env.MY_WORKFLOW_VAR}}"
+                echo "Overwritten Env : ${{env.MY_OVERWRITTEN_VAR}}"
+            - name: Print Env Variables 2
+              run: |
+                echo "Workflow Env : ${{env.MY_WORKFLOW_VAR}}"
+                echo "Overwritten Env : ${{env.MY_OVERWRITTEN_VAR}}"    
