feat(06-contects):Env Variables

--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -40,3 +40,11 @@ jobs:
               run: |
                 echo "Workflow Env : ${{env.MY_WORKFLOW_VAR}}"
                 echo "Overwritten Env : ${{env.MY_OVERWRITTEN_VAR}}"    
+    echo-data2:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Print Env Variales
+            run: |
+              echo "Workflow env: $MY_WORKFLOW_VAR"
+              echo Overwritten env: $MY_OVERWRITTEN_VAR"
+
