feat(06-contects):Env Variables

--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -46,5 +46,5 @@ jobs:
             - name: Print Env Variales
             run: |
               echo "Workflow env: $MY_WORKFLOW_VAR"
-              echo Overwritten env: $MY_OVERWRITTEN_VAR"
+              echo "Overwritten env: $MY_OVERWRITTEN_VAR"
 
