feat(09-functions): add print PR data

--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -8,6 +8,16 @@ jobs:
     echo1:
         runs-on: ubuntu-latest
         steps:
+            - name: Print PR Title
+              run: echo "${{ github.event.pull_request.title }}"
+            - name: Print PR Labels
+              run: |
+                cat << EOF
+                ${{ toJSON(github.event.pull_request.label)  }}
+                EOF
+            - name: Bug Stop
+              if: ${{ !cancelled() && contains(github.event.pull_request.title, 'fix') }}
+              run: echo "I am a bug fix"
             - name: Sleep for 20 seconds
               run: sleep 20
             - name: Failinig Step
